	when working with byte splicing, just to make intentions clearer. Cleanup in
	some other methods in MapleAesOfb and ByteTool.
	* MapleAesOfb.getPacketHeader() renamed to makePacketHeader.

2011-10-07  GoldenKevin  (revision 65)

	* Cash weapons now showing properly in character avatars (character select
	page, 3rd person views from map, smegas, messenger, etc.)
	* Slightly rewrote visible/masked equips logic in CommonPackets.writeAvatar
	to use less conditionals.
	* Fixed map crash when a player set a mastery level for a ranged weapon and
	they knock-backed a mob.
	* Fixed self crash when a player has a cash equip. Rings no longer crash,
	but ring effects still aren't implemented yet.
	* Added !maxequips, !maxskills, and !maxall commands.
	* !spawn command updated to support specifying an amount of mobs to spawn.
	* LittleEndianWriter.writePaddedAsciiString and writeNullTerminatedString
	will no longer throw NullPointerException.

2011-10-08  GoldenKevin  (revision 66)

	* Fixed logged off buddy not appearing as offline in a player's buddy list
	if the buddy changed channels at least once since he/she logged on.
	* Increasing inventory capacity in !maxall command is now made optional
	since that particular operation is still a work in progress and can result
	in client crashes if the user overruns his/her inventory.
	* Improved several scattered database queries/updates by moving
	prepareStatement calls to outside of a loop if there is one and fixing some
	resource leaking possibilities. Fixed TelnetClient not loading ban
	expirations correctly.
	* Implemented the Personal Info feature (i.e. double click on a character,
	or right-click a character->Personal Info in game server) and incrementing/
	decrementing a player's fame. SQL needs to be updated.

Copyright 2011 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.